--- a/Base/templates/home.html
+++ b/Base/templates/home.html
@@ -9,27 +9,48 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
+  
+
+</body>
+</html>
+
 <body>
-	<nav id="navbar" class="flex s-around bg-color">
-        <div class="left-nav">
-            <h2 class="t-white">Portfolio</h2>
-        </div>
-        <div class="right-nav">
-            <ul class="flex">
-                <li><a href="#home" class="t-white roboto">Home <i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#about" class="t-white roboto">About Me <i class="fa-solid fa-user"></i></a></li>
-                <li><a href="#skills" class="t-white roboto">Skills <i class="fa-solid fa-code"></i></a></li>
-                <li><a href="#Projects" class="t-white roboto">Projects <i class="fas fa-project-diagram"></i></a></li>
-                <li><a href="#Contact" class="t-white roboto">Contact <i class="fa-solid fa-rocket"></i></a></li>
-            </ul>
-        </div>
-    </nav>
+  
+
+	<nav id="navbar" class="flex s-between items-center">
+
+    <!-- LEFT : Portfolio Title -->
+    <div class="logo">
+        <h2>Porfolio <span>.</span></h2>
+    </div>
+      
+ 
+
+    <!-- RIGHT : Menu -->
+    <ul class="nav-col flex items-center">
+        <li><a href="#home"><i class="fa fa-house"></i> Home</a></li>
+        <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
+        <li><a href="#skills"><i class="fa fa-code"></i> Skills</a></li>
+        <li><a href="#Projects"><i class="fa fa-briefcase"></i> Projects</a></li>
+        <li><a href="#Contact"><i class="fa fa-envelope"></i> Contact</a></li>
+
+        <!-- Resume Button -->
+        <li>
+            <a href="{% static 'pdfs/Ramela_M_S_Resume.pdf' %}" class="resume-btn">
+                <i class="fa fa-file"></i> Resume
+            </a>
+        </li>
+    </ul>
+
+</nav>
+
+
     {% if messages %}
   <div class="messages-container d-flex flex-column align-items-center mt-3">
     {% for msg in messages %}
@@ -54,7 +75,7 @@
                 <h6 class="poppinss">Hi, I'm</h6>
                 <h1 class="t-white">Ramela M S</h1>
                 <h4 class="poppinss">Aspiring Backend Developer</h4>
-                <a href="{% static 'pdf/Ramela_M_S_Resume.pdf' %}"  target="_blank">
+                <a href="{% static 'pdfs/Ramela_M_S_Resume.pdf' %}"  target="_blank">
                     <button class="btn poppins">Resume</button></a>
                     
                 
@@ -83,13 +104,14 @@
                     <h1 class="t-white m-b-1 poppins">Ramela M S</h1>
                     <br>
                     <p class="t-white poppins">
-                    	I’m a B.Tech student at Panimalar Engineering College pursuing Computer Science & Business Systems.</p>
+                    	I’m a B.Tech student at Panimalar Engineering College pursuing Computer Science & Business Systems. I have a strong passion for software development, problem-solving, and building user-friendly applications.</p>
                     	  
                      <p class="t-white poppins">  
-                        I am a Sophomore <span class="highlight">selected for the Amazon Future Engineer Bootcamp</span>, with <span class="highlight">strong Python fundamentals and hands-on experience in Django and Flask web development.</span>
+                        As a Freshman <span class="highlight">selected for the Amazon Future Engineer Bootcamp</span>, I have <span class="highlight">strong Python fundamentals and hands-on experience in Django and Flask web development.</span>
          
-                  Built multiple Python and web-based projects and enjoys creating reliable, user-focused software solutions.</p>
-                    <a class="btn " id="hireme"
+                  I have built multiple Python and web-based projects including full-stack web applications and enjoys creating reliable, user-focused software solutions.</p>
+                    <p class="t-white poppins"> I am an enthusiastic learner, curious about emerging technologies, and always seeking opportunities to collaborate, innovate, and contribute to impactful projects.</p>
+                  <a class="btn " id="hireme"
                         href="#Contact">Hire Me</a>
                 </div>
             </div>
@@ -116,23 +138,37 @@
                 <div class="flask-sqlalchemy bar p-relative"><span class="bar-content left t-white">Flask SQLAlchemy</span><span
                         class="bar-content right-skills t-white">85%</span></div>
                 <div class="django bar p-relative"><span class="bar-content left t-white">Django</span><span
-                        class="bar-content right-skills t-white">70%</span></div>
+                        class="bar-content right-skills t-white">80%</span></div>
                 <div class="mysql bar p-relative"><span class="bar-content left t-white">MySQL</span><span
                         class="bar-content right-skills t-white">50%</span></div>        
             </div>
         </div>
         </div>
     </section>
-
     
 
     <!-- Projects Section -->
     <section id="Projects">
         <h1 class=" t-center my-2 t-white f-2">Projects</h1>
+        
         <div class="projects-container flex s-center">
             <div class="projects-item flex f-col s-center items-center">
                
-                <h1 class="t-white poppins">Smart Expense Tracking Website</h1>
+                <h2 class="t-white poppins"><span>Social Feed Website</span></h2>
+                <br>
+                <p class="t-white poppins">• Built an inventory and building management system using <span class="highlight"> Flask and Flask-SQLAlchemy </span>for efficient recordkeeping, resource allocation.
+				</p>
+                <div class="buttons flex s-around">
+                    <a href="https://github.com/Ramela-M-S/Social-Feed" target="_blanks"
+                        class="btn mx-1 m-top">GitHub</a>
+                    <a href="https://social-feed-1.onrender.com/" class="btn m-top live">Live
+                        Link</a>
+                </div>
+            </div>
+            <div class="projects-item flex f-col s-center items-center">
+               
+                <h2 class="t-white poppins"><span>Smart Expense Tracking Website</span></h2>
+                <br>
                 <p class="t-white poppins"> • Developed a responsive expense tracker using <span class="highlight"> Flask, Flask-RESTful API, and Flask-SQLAlchemy </span>for
 				backend, allowing users to add, edit, and view expenses with monthly summaries.
 				</p>
@@ -145,8 +181,9 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                
-                <h1 class="t-white poppins">Inventory and Building Management System (IBMS)</h1>
-                <p class="t-white poppins">• Built an inventory and building management system using <span class="highlight"> Flask and Flask-SQLAlchemy </span>for efficient recordkeeping, resource allocation.
+                <h2 class="t-white poppins"><span>Inventory and Building Management System (IBMS)</span></h2>
+                <br>
+                <p class="t-white poppins">• Developed a Social Feed web application using <span class="highlight">Django and Cloudinary</span> to enable users to register, create posts with images, and interact with content, ensuring seamless media handling and user experience.
 				</p>
                 <div class="buttons flex s-around">
                     <a href="https://github.com/Ramela-M-S/IBMS-Inventory-System" target="_blanks"
@@ -155,6 +192,7 @@
                         Link</a>
                 </div>
             </div>
+            
            
          </div>
 
@@ -164,6 +202,8 @@
     <!-- Contact Me Section -->
     <section id="Contact" class="m-b-1">
         <h1 class=" t-center my-2 t-white f-2">Contact Me</h1>
+        <br>
+        <br>
         <div class="contact-container flex s-around items-centers">
             <div class="form" id="contactForm">
                 <form method="post"> 
@@ -198,8 +238,8 @@
             <li><a href="#home" class="poppinss">Home</a></li>
             <li><a href="#about" class="poppinss">About</a></li>
             <li><a href="#skills" class="poppinss">Skills</a></li>
-            <li><a href="#projects" class="poppinss">Projects</a></li>
-            <li><a href="#portfolio" class="poppinss">Portfolio</a></li>
+            <li><a href="#Projects" class="poppinss">Projects</a></li>
+            <li><a href="#home" class="poppinss">Portfolio</a></li>
         </ul>
         <ul class="flex s-center w-80 font-awesome ">
             <a href="https://www.linkedin.com/in/ramela-m-s/" target="_blank">
@@ -218,8 +258,7 @@
      
 </body> 
 </html>
-
- 	
+	
 
 </body>
 </html>
